tests/failing/signal.tail
let v1:<int>100 = iotaV(100) in
let v4:<int>101 = consV{[int],[100]}(0,v1) in
reduce{[double],[0]}(addd,0.00,each{[double,double],[1]}(fn v12:[double]0 => maxd(~50.00,v12),each{[double,double],[1]}(fn v11:[double]0 => mind(50.00,v11),each{[double,double],[1]}(fn v10:[double]0 => muld(50.00,v10),zipWith{[double,double,double],[1]}(divd,each{[int,double],[1]}(i2d,drop{[int],[1]}(1,zipWith{[int,int,int],[1]}(subi,v4,transp{[int],[1]}(vrotateV(~1,transp{[int],[1]}(v4)))))),eachV{[double,double],[100]}(fn v3:[double]0 => addd(0.01,v3),eachV{[int,double],[100]}(i2d,v1)))))))
